# storage/api-docs/api-docs.yaml
@@ -54,13 +54,26 @@ paths:
                     type: string
                     example: 'Sorry, wrong email address or password. Please try again'
                 type: object
-  /api/v1/logout:
-    get:
+  /api/v1/chat:
+    post:
       tags:
-        - Authentication
-      summary: 'Sign out'
-      description: 'Sign out'
-      operationId: logout
+        - 'Chat By Open AI'
+      summary: 'Chat By Open AI'
+      description: 'Chat By Open AI'
+      operationId: chatByOpenAI
+      requestBody:
+        description: Credentials
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - chat
+              properties:
+                chat:
+                  type: string
+                  example: Hello
+              type: object
       responses:
         200:
           description: Success
@@ -70,7 +83,28 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: 'Sign out successfully!'
+                    example: 'Hello! How can I assist you today?'
+                type: object
+      security:
+        -
+          sanctum: []
+  /api/v1/chat-histories:
+    get:
+      tags:
+        - 'Chat By Open AI'
+      summary: 'Chat Histories'
+      description: 'Chat Histories'
+      operationId: chatHistories
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: 'Chat histories'
                 type: object
       security:
         -
